syntax = "proto3";

package order;

option go_package = "build/proto/order";

message OrderItem {
  string sku = 1;
  int32 quantity = 2;
}

message OrderCreated {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  int64 amount = 4;
  int64 created_at = 5;
}